# GPMS

./: .gitignore
api-server/: app.py  requirements.txt
api-server/stable_diffusion/: gif_creator.py  image_processing.py  pipeline_initialization.py  pipeline_service.py
application/: CMakeLists.txt  Info.plist
application/gpms_ui/: CMakeLists.txt
application/gpms_ui/resources/: images.qrc
application/gpms_ui/src/: mainwindow.cpp  mainwindow.h
application/gpms_ui/src/pages/: acceptpicturepage.cpp  acceptpicturepage.h  acceptpicturepage.ui  createpage.cpp  createpage.h  createpage.ui  picturepage.cpp  picturepage.h  picturepage.ui  sensitivitypage.cpp  sensitivitypage.ui  textvisionpage.cpp
application/gpms_ui/src/pages/sidebar_pages/: favoritespage.ui  settingspage.ui  userpage.ui
application/resources/: images.qrc  menubar_styles.qss  styles.qrc
application/src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
application/src/pages/: acceptpicturepage.cpp  acceptpicturepage.h  acceptpicturepage.ui  clickableframe.cpp  clickableframe.h  createpage.cpp  createpage.h  createpage.ui  imageprojectionwindow.cpp  imageprojectionwindow.h  pickimagespage.cpp  pickimagespage.h  pickimagespage.ui  projectpage.cpp  projectpage.h  projectpage.ui  sensitivitypage.cpp  sensitivitypage.h  sensitivitypage.ui  takepicture.cpp  takepicture.h  takepicture.ui  textvisionpage.cpp  textvisionpage.h  textvisionpage.ui
application/src/pages/calibration/: calibrationPage.cpp  calibrationPage.h  calibrationPage.ui
application/src/pages/create/: createpage.h  createpage.ui
application/src/pages/creation_pages/: calibrationpage.cpp  calibrationpage.h  calibrationpage.ui
application/src/pages/pickImages/: clickableframe.h  pickimagespage.cpp  pickimagespage.h
application/src/pages/project/: projectpage.cpp  projectpage.h  projectpage.ui
application/src/pages/sensitivity/: sensitivitypage.cpp  sensitivitypage.h  sensitivitypage.ui
application/src/pages/sidebarPages/: favoritespage.h
application/src/pages/sidebar_pages/: favoritespage.cpp  settingspage.cpp  settingspage.h  userpage.cpp
application/src/pages/textVision/: textvisionpage.cpp  textvisionpage.h
application/src/utils/: image_utils.h
application/src/windows/: imageprojectionwindow.cpp  imageprojectionwindow.ui  mainwindow.h  mainwindow.ui
docs/: API-ServerDocs.md  ApplicationDocs.md  README.md
